# wgpu-html

./: .gitignore  404.html  AGENTS.md  BENCHMARKS.md  CLAUDE.md  Cargo.toml  README.md  clippy.toml  devtools-dump-109.html  devtools-dump-214.html  devtools-dump-3.html  devtools-dump-73.html  index.html  rustfmt.toml  search-index.json  sitemap.xml
crates-v1/lui/: Cargo.toml
crates-v1/lui-devtools/: Cargo.toml
crates-v1/lui-devtools/src/: devtools.rs
crates-v1/lui-devtools/tests/: devtools.rs
crates-v1/lui/src/: color_picker_overlay.rs  date_picker_overlay.rs  inspect_overlay.rs  interactivity.rs  lib.rs  lib_tests.rs  paint.rs  paint_tests.rs
crates-v1/lui/tests/: date_edit.rs  file_input.rs  flex_shrink.rs  input_types.rs  interactivity.rs  paint.rs  pipeline_classify.rs  selection.rs
crates/lui/: Cargo.toml
crates/lui-cascade/: BENCHMARKS.md  Cargo.toml
crates/lui-cascade/benches/: cascade_bench.rs
crates/lui-cascade/src/: bloom.rs  cascade.rs  index.rs  inline.rs  lib.rs  matching.rs  media.rs  pseudo.rs  query.rs  style.rs  var_resolution.rs
crates/lui-cascade/tests/: helpers.rs  query.rs  tests.rs
crates/lui-devtools/: Cargo.toml
crates/lui-devtools/src/: devtools.rs  devtools_hook.rs  profiler_hook.rs  tests.rs
crates/lui-layout/: Cargo.toml
crates/lui-layout/benches/: layout_bench.rs
crates/lui-layout/docs/: benches.md  gaps.md
crates/lui-layout/src/: background.rs  block.rs  box_gen.rs  box_model.rs  box_tree.rs  color.rs  context.rs  engine.rs  entry.rs  flex.rs  flow.rs  form_controls.rs  geometry.rs  gradient.rs  grid.rs  hit_test.rs  incremental.rs  inline.rs  length.rs  lib.rs  positioned.rs  shadow.rs  sides.rs  sizes.rs  svg.rs  table.rs  text.rs  text_shaping.rs  transform.rs  types.rs
crates/lui-layout/tests/: helpers.rs  layout_tests.rs  tests.rs
crates/lui-text/: Cargo.toml
crates/lui-text/src/: font_db.rs  lib.rs  shape.rs
crates/lui-text/tests/: atlas.rs  font_db.rs  shape.rs
crates/lui/docs/: custom-css-properties.md  events.md  form.md  live-lifecycle.md  timer.md
crates/lui/examples/: counter.rs
crates/lui/src/: color_picker_overlay.rs  date_picker_overlay.rs  dispatch.rs  driver.rs  driver_api.rs  inspect_overlay.rs  interactivity.rs  interactivity_tests.rs  lib.rs  lib_tests.rs  lui.rs  paint.rs  paint_tests.rs  render_api.rs  resource.rs  scroll.rs  text_hit.rs  text_select.rs  timer.rs  winit_driver.rs
crates/lui/tests/: date_edit.rs  dispatch.rs  file_input.rs  flex_shrink.rs  form.rs  input_types.rs  interactivity.rs  live.rs  paint.rs  pipeline_classify.rs  scrolling.rs  selection.rs  test_paint_colors.rs  transform.rs
crates/lui/ua/: ua_whatwg.css
crates/wgpu-html/: Cargo.toml
crates/wgpu-html-demo/: Cargo.toml
crates/wgpu-html-demo-bevy/: Cargo.toml
crates/wgpu-html-demo-bevy/src/: devtools.rs  scene.rs
crates/wgpu-html-demo/html/: base.html  click-demo.html  devtools-test.html  devtools.html  events-test.html  flex-grow.html  flex-test.html  form.html  forms.html  gif.html  grid.html  hello-text.html  icons-demo.html  img-test.html  media-queries.html  overflow.html  p0-demo.html  position-overlay.html  resize.html  scrollbar-test.html  svg-test.html  text-selection.html  text-shrink.html  text-wrapping.html
crates/wgpu-html-demo/src/: egui.rs  main.rs  parse_cmd.rs  winit.rs
crates/wgpu-html-devtools/: Cargo.toml
crates/wgpu-html-devtools/html/: devtools.css  devtools.css.html  devtools.html
crates/wgpu-html-devtools/src/: breadcrumb.rs  component.rs  css_fmt.rs  devtools.rs  devtools_hook.rs  html_gen.rs  lib.rs  profiler_hook.rs  style_extract.rs  styles_panel.rs  tags.rs  tests.rs  tree_panel.rs
crates/wgpu-html-devtools/tests/: devtools.rs
crates/wgpu-html-layout/: Cargo.toml  devtools-dump.html
crates/wgpu-html-layout/src/: color.rs  flex.rs  gradient.rs  grid.rs  length.rs  lib.rs  style_attr.rs  svg.rs  table.rs  tests.rs
crates/wgpu-html-text/: Cargo.toml
crates/wgpu-html-text/src/: atlas.rs  atlas_tests.rs  font_db.rs  lib.rs  shape.rs  shape_tests.rs
crates/wgpu-html-text/tests/: atlas.rs  font_db.rs  shape.rs
crates/wgpu-html/src/: color_picker_overlay.rs  date_picker_overlay.rs  inspect_overlay.rs  interactivity.rs  interactivity_tests.rs  lib.rs  lib_tests.rs  paint.rs  paint_tests.rs  scroll.rs
crates/wgpu-html/tests/: date_edit.rs  file_input.rs  flex_shrink.rs  input_types.rs  interactivity.rs  paint.rs  pipeline_classify.rs  selection.rs
demo-v1/lui-demo/: Cargo.toml
demo-v1/lui-demo-bevy/: Cargo.toml
demo-v1/lui-demo-bevy/src/: devtools.rs  main.rs  scene.rs
demo-v1/lui-demo/html/: css-vars.html  custom-elements.html  flex-browser-like.html  img-test.html  transform-text.html
demo-v1/lui-demo/src/: egui.rs  main.rs  winit.rs
demo-v1/lui-ui-demo/: Cargo.toml
demo-v1/lui-ui-demo/src/: main.rs
demo/lui-demo/: Cargo.toml
demo/lui-demo-bevy/: Cargo.toml
demo/lui-demo-bevy/src/: devtools.rs  main.rs  scene.rs
demo/lui-demo/html/: box-shadow-demo.html  events-test.html  flex.html  form-validation.html  form.html  grid.html  images.html  shell.html  styled-inputs.html  test.html  transform-demo.html  transform-text.html  transform.html
demo/lui-demo/src/: egui.rs  main.rs  winit.rs
demo/lui-demo/tests/: layout_dump.rs
demo/wgpu-html-demo/: Cargo.toml
demo/wgpu-html-demo-bevy/: Cargo.toml
demo/wgpu-html-demo-bevy/src/: devtools.rs  main.rs  scene.rs
demo/wgpu-html-demo/html/: bg-image.html  click-demo.html  events-test.html  flex-grow.html  form.html  gradient-test.html  hello-text.html  map-editor-new-project-modal.html  scroll-test.html  styled-inputs.html  styled-pickers.html  svg-test.html  table.html  text-selection.html
demo/wgpu-html-demo/src/: egui.rs  main.rs  winit.rs
drivers-v1/lui-driver-bevy/: Cargo.toml
drivers-v1/lui-driver-bevy/src/: lib.rs
drivers-v1/lui-driver-egui/: Cargo.toml
drivers-v1/lui-driver-winit/: Cargo.toml
drivers/lui-driver/: Cargo.toml
drivers/lui-driver-bevy/: Cargo.toml
drivers/lui-driver-egui/: Cargo.toml
drivers/wgpu-html-driver-bevy/: Cargo.toml
(+4231 files in other folders)
