[workspace]
resolver = "2"
members = [
    "crates/lui-resolve",
    "crates/lui",
    "crates/lui-cascade",
    "crates/lui-css-old",
    "crates/lui-css-parser",
    "crates/lui-html-parser",
    "crates/lui-devtools",
    "crates/lui-display-list",
    "crates/lui-events",
    "crates/lui-assets",
    "crates/lui-layout-old",
    "crates/lui-models",
    "crates/lui-parser",
    "renderers/lui-render-api",
    "renderers/lui-renderer-wgpu",
    "crates/lui-style",
    "crates/lui-text",
    "crates/lui-tree",
    "crates/lui-ui",
    "drivers/lui-driver",
    "drivers/lui-driver-bevy",
    "drivers/lui-driver-egui",
    "drivers/lui-driver-winit",
    "demo/lui-demo",
    "demo/lui-demo-bevy",
    "demo/lui-ui-demo",
]

[workspace.dependencies]
lui = { path = "crates/lui" }
lui-cascade = { path = "crates/lui-cascade" }
lui-css = { path = "crates/lui-css-parser" }
lui-css-old = { path = "crates/lui-css-old" }
lui-html-parser = { path = "crates/lui-html-parser" }
lui-devtools = { path = "crates/lui-devtools" }
lui-events = { path = "crates/lui-events" }
lui-layout-old = { path = "crates/lui-layout-old" }
lui-models = { path = "crates/lui-models" }
lui-parser = { path = "crates/lui-parser" }
lui-display-list = { path = "crates/lui-display-list" }
lui-render-api = { path = "renderers/lui-render-api" }
lui-renderer-wgpu = { path = "renderers/lui-renderer-wgpu" }
lui-style = { path = "crates/lui-style" }
lui-text = { path = "crates/lui-text" }
lui-tree = { path = "crates/lui-tree" }
lui-driver = { path = "drivers/lui-driver" }
lui-assets = { path = "crates/lui-assets" }
lui-driver-bevy = { path = "drivers/lui-driver-bevy" }
lui-driver-egui = { path = "drivers/lui-driver-egui" }
lui-driver-winit = { path = "drivers/lui-driver-winit" }
lui-ui = { path = "crates/lui-ui" }

wgpu = "29"
winit = "0.30"
pollster = "0.4"
arboard = "3"
egui = "0.34"
eframe = "0.34"
bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
ureq = "3.3.0"
resvg = "0.47.0"
rfd = "0.17.2"
bumpalo = { version = "3", features = ["collections"] }
rustc-hash = "2"


# ── Dev profile: optimize hot crates for usable FPS during development ──
# The demo/app code stays at opt-level 0 for fast incremental compiles,
# but the engine hot path gets opt-level 2 so layout/text/paint run fast.
[profile.dev.package.lui-layout-old]
opt-level = 2
[profile.dev.package.lui-text]
opt-level = 2
[profile.dev.package.lui-style]
opt-level = 2
[profile.dev.package.lui]
opt-level = 2
[profile.dev.package.lui-renderer-wgpu]
opt-level = 2
[profile.dev.package.cosmic-text]
opt-level = 2
[profile.dev.package.rustybuzz]
opt-level = 2
[profile.dev.package.ttf-parser]
opt-level = 2
[profile.dev.package.image]
opt-level = 2
