[workspace]
resolver = "2"
members = [
    "crates/lui-cascade",
    "crates/lui-core",
    "crates/lui-glyph",
    "crates/lui-layout",
    "crates/lui-paint",
    "crates/lui-parse",
    "crates/lui-resolve",
    "crates-v1/lui",
    "crates-v1/lui-assets",
    "crates-v1/lui-css-old",
    "crates-v1/lui-devtools",
    "crates-v1/lui-display-list",
    "crates-v1/lui-layout-old",
    "crates-v1/lui-models",
    "crates-v1/lui-parser",
    "crates-v1/lui-style",
    "crates-v1/lui-text",
    "crates-v1/lui-tree",
    "crates-v1/lui-ui",
    "renderers/lui-render-api",
    "renderers/lui-renderer-wgpu",
    "drivers/lui-driver",
    "drivers/lui-driver-winit",
    "drivers-v1/lui-driver",
    "drivers-v1/lui-driver-bevy",
    "drivers-v1/lui-driver-egui",
    "drivers-v1/lui-driver-winit",
    "demo/lui-demo",
    "demo-v1/lui-demo",
    "demo-v1/lui-demo-bevy",
    "demo-v1/lui-ui-demo", "crates/lui",
]

[workspace.dependencies]
lui = { path = "crates/lui" }
lui-v1 = { path = "crates-v1/lui" }
lui-cascade = { path = "crates/lui-cascade" }
lui-core = { path = "crates/lui-core" }
lui-css-old = { path = "crates-v1/lui-css-old" }
lui-parse = { path = "crates/lui-parse" }
lui-devtools = { path = "crates-v1/lui-devtools" }
lui-events = { path = "crates-v1/lui-events-old" }
lui-layout = { path = "crates/lui-layout" }
lui-layout-old = { path = "crates-v1/lui-layout-old" }
lui-paint = { path = "crates/lui-paint" }
lui-models = { path = "crates-v1/lui-models" }
lui-parser = { path = "crates-v1/lui-parser" }
lui-display-list = { path = "crates-v1/lui-display-list" }
lui-render-api = { path = "renderers/lui-render-api" }
lui-renderer-wgpu = { path = "renderers/lui-renderer-wgpu" }
lui-style = { path = "crates-v1/lui-style" }
lui-text = { path = "crates-v1/lui-text" }
lui-tree = { path = "crates-v1/lui-tree" }
lui-driver-v1 = { path = "drivers-v1/lui-driver" }
lui-assets = { path = "crates-v1/lui-assets" }
lui-driver-bevy-v1 = { path = "drivers-v1/lui-driver-bevy" }
lui-driver-egui-v1 = { path = "drivers-v1/lui-driver-egui" }
lui-driver-winit-v1 = { path = "drivers-v1/lui-driver-winit" }
lui-ui = { path = "crates-v1/lui-ui" }
lui-glyph = { path = "crates/lui-glyph" }

wgpu = "29"
winit = "0.30"
pollster = "0.4"
arboard = "3"
egui = "0.34"
eframe = "0.34"
bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
ureq = "3.3.0"
resvg = "0.47.0"
rfd = "0.17.2"
bumpalo = { version = "3", features = ["collections"] }
rustc-hash = "2"

[profile.dev.package.lui-layout-old]
opt-level = 2
[profile.dev.package.lui-text]
opt-level = 2
[profile.dev.package.lui-style]
opt-level = 2
[profile.dev.package.lui]
opt-level = 2
[profile.dev.package.lui-renderer-wgpu]
opt-level = 2
[profile.dev.package.cosmic-text]
opt-level = 2
[profile.dev.package.rustybuzz]
opt-level = 2
[profile.dev.package.ttf-parser]
opt-level = 2
[profile.dev.package.image]
opt-level = 2
