[package]
name = "lui-v1"
version = "0.1.0"
edition = "2024"

[dependencies]
lui-assets.workspace   = true
lui-events.workspace   = true
lui-layout-old.workspace   = true
lui-models.workspace   = true
lui-parser.workspace   = true
lui-renderer-wgpu.workspace = true
lui-style.workspace    = true
lui-text.workspace     = true
lui-tree.workspace     = true
rfd.workspace                = true
