[package]
name = "lui-cascade"
version = "0.1.0"
edition = "2024"

[dependencies]
lui-html-parser = { path = "../lui-html-parser" }
lui-css-parser = { path = "../lui-css-parser" }
bumpalo.workspace = true
rustc-hash = "2"
smallvec = "1"
rayon = "1"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "cascade_bench"
harness = false
