[package]
name = "lui-layout"
version = "0.1.0"
edition = "2024"

[dependencies]
lui-core = { path = "../lui-core" }
lui-parse = { path = "../lui-parse" }
lui-cascade = { path = "../lui-cascade" }
lui-resolve = { path = "../lui-resolve" }
bumpalo.workspace = true
rustc-hash = "2"
lui-glyph = { path = "../lui-glyph" }
