[package]
name = "lui-layout"
version = "0.1.0"
edition = "2024"
autotests = false

[dependencies]
lui-core = { path = "../lui-core" }
lui-parse = { path = "../lui-parse" }
lui-cascade = { path = "../lui-cascade" }
lui-resolve = { path = "../lui-resolve" }
bumpalo.workspace = true
rustc-hash = "2"
lui-glyph = { path = "../lui-glyph" }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[test]]
name = "tests"
path = "tests/tests.rs"

[[bench]]
name = "layout_bench"
harness = false
