[package]
name = "lui"
version = "0.1.0"
edition = "2024"

[features]
default = []
wgpu = ["dep:wgpu", "dep:bytemuck", "dep:image", "dep:pollster"]
winit = ["dep:winit", "dep:arboard"]
ua_whatwg = []

[dependencies]
lui-core.workspace = true
lui-parse.workspace = true
lui-cascade.workspace = true
lui-layout.workspace = true
lui-glyph.workspace = true
raw-window-handle = "0.6"

wgpu = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
image = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
winit = { workspace = true, optional = true }
arboard = { workspace = true, optional = true }
