[package]
name = "wgpu-html-demo-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu-html-driver-bevy  = { path = "../wgpu-html-driver-bevy" }
wgpu-html-devtools     = { path = "../wgpu-html-devtools" }
wgpu-html.workspace    = true
wgpu-html-renderer     = { path = "../wgpu-html-renderer" }
wgpu-html-text         = { path = "../wgpu-html-text" }
pollster.workspace     = true
bevy = { version = "0.15", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_asset",
    "bevy_ui",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_state",
    "default_font",
    "tonemapping_luts",
    "x11",
] }
