[package]
name = "wgpu-html-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu-html.workspace       = true
wgpu-html-text.workspace  = true
wgpu-html-tree.workspace  = true
wgpu-html-winit.workspace = true
winit.workspace           = true
pollster.workspace        = true
arboard.workspace         = true
