[package]
name = "wgpu-html-layout"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu-html-models.workspace = true
wgpu-html-style.workspace  = true
wgpu-html-text.workspace   = true
wgpu-html-tree.workspace   = true
image.workspace             = true
ureq.workspace              = true

[dev-dependencies]
wgpu-html-parser.workspace = true
