[package]
name = "wgpu-html-layout"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu-html-models.workspace  = true
wgpu-html-parser.workspace  = true
wgpu-html-style.workspace   = true
wgpu-html-text.workspace    = true
wgpu-html-tree.workspace    = true
wgpu-html-assets.workspace  = true
resvg.workspace              = true
