[package]
name = "wgpu-html"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu-html-assets.workspace   = true
wgpu-html-events.workspace   = true
wgpu-html-layout.workspace   = true
wgpu-html-models.workspace   = true
wgpu-html-parser.workspace   = true
wgpu-html-renderer.workspace = true
wgpu-html-style.workspace    = true
wgpu-html-text.workspace     = true
wgpu-html-tree.workspace     = true
