[package]
name = "lui-demo-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
lui-driver-bevy-v1 = { path = "../../drivers-v1/lui-driver-bevy" }
lui-devtools     = { path = "../../crates-v1/lui-devtools" }
lui.workspace    = true
lui-renderer-wgpu = { path = "../../renderers-v1/lui-renderer-wgpu" }
lui-text         = { path = "../../crates-v1/lui-text" }
pollster.workspace     = true
bevy = { version = "0.18", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_asset",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_state",
    "default_font",
    "tonemapping_luts",
    "zstd_rust",
    "x11",
] }
