[package]
name = "lui-demo-v1"
version = "0.1.0"
edition = "2024"

[dependencies]
lui.workspace         = true
lui-models.workspace   = true
lui-style.workspace    = true
lui-text.workspace     = true
lui-tree.workspace     = true
lui-driver-winit-v1    = { path = "../../drivers-v1/lui-driver-winit" }
lui-driver-egui-v1     = { path = "../../drivers-v1/lui-driver-egui" }
lui-devtools.workspace = true
winit.workspace              = true
egui.workspace               = true
eframe.workspace             = true
arboard.workspace            = true
