[package]
name = "lui-demo-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
lui-driver-bevy  = { path = "../../drivers/lui-driver-bevy" }
lui-devtools     = { path = "../../crates/lui-devtools" }
lui.workspace    = true
lui-renderer     = { path = "../../renderers/lui-renderer" }
lui-text         = { path = "../../crates/lui-text" }
pollster.workspace     = true
bevy = { version = "0.18", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_asset",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_state",
    "default_font",
    "tonemapping_luts",
    "zstd_rust",
    "x11",
] }
