[package]
name = "wgpu-html-demo-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu-html-driver-bevy  = { path = "../../drivers/wgpu-html-driver-bevy" }
wgpu-html-devtools     = { path = "../../crates/wgpu-html-devtools" }
wgpu-html.workspace    = true
wgpu-html-renderer     = { path = "../../crates/wgpu-html-renderer" }
wgpu-html-text         = { path = "../../crates/wgpu-html-text" }
pollster.workspace     = true
bevy = { version = "0.18", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_asset",
    "bevy_ui",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_state",
    "default_font",
    "tonemapping_luts",
    "zstd_rust",
    "x11",
] }
