[package]
name = "wgpu-html-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu-html.workspace         = true
wgpu-html-models.workspace   = true
wgpu-html-style.workspace    = true
wgpu-html-text.workspace     = true
wgpu-html-tree.workspace     = true
wgpu-html-driver-winit       = { path = "../../drivers/wgpu-html-driver-winit" }
wgpu-html-driver-egui        = { path = "../../drivers/wgpu-html-driver-egui" }
wgpu-html-devtools.workspace = true
winit.workspace              = true
egui.workspace               = true
eframe.workspace             = true
arboard.workspace            = true
