[package]
name = "lui-driver-bevy-v1"
version = "0.1.0"
edition = "2024"

[dependencies]
lui.workspace       = true
lui-driver-v1        = { path = "../lui-driver" }
lui-renderer-wgpu    = { path = "../../renderers/lui-renderer-wgpu" }
lui-text             = { path = "../../crates-v1/lui-text" }
lui-tree             = { path = "../../crates-v1/lui-tree" }
lui-parser           = { path = "../../crates-v1/lui-parser" }
bevy                       = { version = "0.18", default-features = false, features = ["bevy_winit", "bevy_render", "bevy_asset", "bevy_ui", "bevy_ui_render"] }
pollster.workspace         = true
