[package]
name = "lui-driver-egui-v1"
version = "0.1.0"
edition = "2024"

[dependencies]
lui-v1.workspace      = true
lui-renderer-wgpu = { path = "../../renderers/lui-renderer-wgpu" }
lui-tree.workspace = true
lui-driver-v1      = { path = "../lui-driver" }
wgpu.workspace           = true
pollster.workspace       = true
egui.workspace           = true
