[package]
name = "lui-driver-winit"
version = "0.1.0"
edition = "2024"

[dependencies]
lui.workspace      = true
lui-driver         = { path = "../lui-driver" }
lui-renderer-wgpu.workspace = true
lui-tree.workspace = true
winit.workspace          = true
pollster.workspace       = true
arboard.workspace        = true
