[package]
name = "lui-driver-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
lui.workspace       = true
lui-driver           = { path = "../lui-driver" }
lui-renderer         = { path = "../../crates/lui-renderer" }
lui-text             = { path = "../../crates/lui-text" }
lui-tree             = { path = "../../crates/lui-tree" }
lui-parser           = { path = "../../crates/lui-parser" }
bevy                       = { version = "0.18", default-features = false, features = ["bevy_winit", "bevy_render", "bevy_asset", "bevy_ui", "bevy_ui_render"] }
pollster.workspace         = true
