[package]
name = "lui-driver-egui"
version = "0.1.0"
edition = "2024"

[dependencies]
lui.workspace      = true
lui-renderer-wgpu.workspace = true
lui-tree.workspace = true
lui-driver         = { path = "../lui-driver" }
wgpu.workspace           = true
pollster.workspace       = true
egui.workspace           = true
