[package]
name = "wgpu-html-driver-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu-html.workspace       = true
wgpu-html-driver           = { path = "../wgpu-html-driver" }
wgpu-html-renderer         = { path = "../../crates/wgpu-html-renderer" }
wgpu-html-text             = { path = "../../crates/wgpu-html-text" }
wgpu-html-tree             = { path = "../../crates/wgpu-html-tree" }
wgpu-html-parser           = { path = "../../crates/wgpu-html-parser" }
bevy                       = { version = "0.18", default-features = false, features = ["bevy_winit", "bevy_render", "bevy_asset", "bevy_ui"] }
pollster.workspace         = true
